--- a/index.html
+++ b/index.html
@@ -10,31 +10,29 @@
 <body>    
     <div class="caixa"> 
         <ul>
-            <a href=""><img src="imgs/Exereu.png" alt="LogoExcelify" class="logo"></a>
-            <a href="pag2.html" class="tituloCabeça">Chat</a>
-            <a href="#" class="tituloCabeça">Vídeos</a>
-            <a href="#" class="tituloCabeça">Sobre</a>
+            <a href=""><img src="imgs/ExcelifyIMG.png" alt="LogoExcelify" class="logo"></a>
         </ul>
     </div>
 
     <div class="CaixaTextoDecorativa0">
-        <p class="textoExcel01">“O Excel é a ferramenta mais poderosa já criada para transformar dados em decisões inteligentes, rápidas e estratégicas. Ele permite que qualquer pessoa, com poucos cliques, transforme informações brutas em insights valiosos para o dia a dia pessoal ou profissional.” <br><br>— Charles Williams, especialista em Excel e desenvolvedor MVP da Microsoft</p>
-    </div>
-
-    <main>
-        <div class="Chat">
-            <div class="HelpBox">
-                <h1>Transformando seus dados em soluções</h1>
-            </div>
-            
-            <div class="CaixaChat">
-                <input type="text" class="inputChat" placeholder="Digite sua mensagem aqui..." id="chatInput">
+        <div class="BoxMain">
+            <div class="ModeloTexto">
+                <h1 class="Texto01">TRANSFORMANDO SEUS DADOS EM IDEIAS</h1>
+                <p class="Texto02">Aqui, você recebe dicas práticas, fáceis de entender e perfeitas para <br> resolver seus desafios no dia a dia com planilhas.</p>
+                <p class="Texto03">Experimente já nosso chat</p>
+                <input type="text" class="Chat" placeholder="" id="chatInput">
+                <div class="EfeitoImagem01"><img src="imgs/Effect01.png" alt="" class="Efeito01"></div>
             </div>
         </div>
-
+       <div class="ExcelImage">
+            <img src="imgs/logo-microsoft-excel-1024.png" alt="ExcelImage" class="imagemExcel">
+        </div>
+    </div>
+    <main>
         <div class="CaixaTextoDecorativa">
-            <p class="textoExcel">“João da equipe TechHelp é um verdadeiro mago do Excel! Sua abordagem profissional, paciente e criativa tornou o processo de organizar nossos dados algo prazeroso.”</p>
-            <p class="textoExcel1">— Carla Mendes, Setor Financeiro da InovaTech</p>
+            <div>
+                <input type="search" placeholder="Pesquisar..." class="procuraVideos">
+            </div>
         </div>
     </main>
 
