--- a/pag2.html
+++ b/pag2.html
@@ -11,7 +11,7 @@
 <main class="mainWrapper">
   <aside class="historico">
     <nav class="menuLinks">
-      <a href="#" class="linkMenu">
+      <a href="index.html" class="linkMenu">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
           <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
           <polyline points="9 22 9 12 15 12 15 22"/>
