--- a/pag2.html
+++ b/pag2.html
@@ -11,30 +11,7 @@
 <main class="mainWrapper">
   <aside class="historico">
     <nav class="menuLinks">
-      <a href="index.html" class="linkMenu">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-          <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
-          <polyline points="9 22 9 12 15 12 15 22"/>
-        </svg>
-        <span>Excelify</span>
-      </a>
-  
-      <a href="#" class="linkMenu">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-          <circle cx="12" cy="12" r="10"/>
-          <polygon points="10 8 16 12 10 16 10 8"/>
-        </svg>
-        <span>Vídeos</span>
-      </a>
-  
-      <a href="#" class="linkMenu">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 24 24">
-          <circle cx="12" cy="12" r="10"/>
-          <line x1="12" y1="16" x2="12" y2="12"/>
-          <line x1="12" y1="8" x2="12" y2="8"/>
-        </svg>
-        <span>Sobre</span>
-      </a>
+      <a href="pag2.html" class="logo"><img src="imgs/ExcelifyIMG.png" alt="LogoExcelify" class="logo"></a>
     </nav>
   
     <h2 class="tituloDicas">Dicas Rápidas</h2>
