--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
           <div class="sugestao">"Como automatizar relatórios?"</div>
         </div>
 
-        <input type="text" class="Chat" placeholder="Deixe sua dúvida aqui!" id="chatInput" />
-
-        <div id="chatBox" class="chat-box hidden"></div>
+ 
+        <div class="chat-outer-container">
+          <div class="chat-inner-container">
+            <input type="text" class="Chat" placeholder="Deixe sua dúvida aqui!" id="chatInput" />
+            <div id="chatBox" class="chat-box hidden"></div>
+          </div>
+        </div>
       </div>
     </div>
 
