--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
       </div>
     </div>
 
-    <div class="ExcelImage">
-      <img src="imgs/logo-microsoft-excel-1024.png" alt="ExcelImage" class="imagemExcel" />
+    <div class="CaixaImagem">
+      <div class="ExcelImage">
+        <picture>
+          <source media="(max-width: 350px)" srcset="imgs/logo-microsoft-excel-1024.png">
+          <source media="(min-width: 200px)" srcset="imgs/logo-microsoft-excel-1024.png">
+          <img src="imgs/logo-microsoft-excel-1024.png" alt="LogoExcel" class="imagemExcel">
+        </picture>
+      </div>
     </div>
   </div>
 
